--- a/style.css
+++ b/style.css
@@ -1,102 +1,124 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
+html {
+  height: 100%;
+  min-height: 100%;
+
+  margin: 0 auto;
+}
 
 body {
-    width: 100%;
-    height: auto;
-    background-color: #fff;
-    color: #000;
-    font-weight: 400;
-    font-family: 'Roboto Mono', monospace;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100%;  
+  font-family: "Roboto Mono", monospace;
 }
 
-/* .imgCabecera {
-    align-items: center;
-    width: 30px;
-    height: 50px;
-} */
+.imageHeader {
+  display: flex;
+  flex-grow: 10;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2em;
+}
 
+#imgCabecera {
+  width: 40%;
+}
+
+.searchContainer {
+  display: flex;
+  flex-grow: 10;
+  display: flex;
+  align-items: center;
+  gap: 2em;
+  justify-content: center;
+  padding: 0.75em;
+}
+
+#search {
+  border: solid 5px blue;
+  border-radius: 1em;
+  padding: 1em;
+  background-color: blue;
+  color: white;
+}
 
 #catalogContainer {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    gap: 20px;
-    
+  flex-grow: 80;
+  display: grid;
+  gap: 2.5em;
+  padding: 2.5em 5em;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
 }
 
-
+/* estilo de la tarjeta */
 
 .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-  }
-  
-
-
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-
-  .flip-card-front {
-    background-image: url(./img/fondo5-pokemon.jpeg);
-    color: black;
-    position: absolute;
-  }
-  
-  .flip-card-back {
-    background-color: #2980b9;
-    color: white;
-    transform: rotateY(180deg);
-  }
-
-
-.card {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    border: 5px solid black;
-    border-radius: 10%;
-    padding: 10%;
-    max-height: 15em;
-    max-width: 8em;
-    text-align: center;
-    gap: 1em;
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
 }
 
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  /* background-image: url(./img/fondo5-pokemon.jpeg); */
+  color: black;
+  position: absolute;
+}
+
+.flip-card-back {
+  color: black;
+  transform: rotateY(180deg);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .pokemon-title {
-    font-size: 2rem;
+  padding: 0.75em;
+  font-size: 2rem;
+  text-transform: capitalize;
 }
 
-
 .pokemon-image {
-    position: relative;
-    width: 180px;
-    margin: 50px auto;
+  position: relative;
+  width: 180px;
+  height: 150px;
 }
