--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   height: 100%;
   min-height: 100%;  
   font-family: "Roboto Mono", monospace;
+  background-color: #C63C47; 
 }
 
 .imageHeader {
@@ -26,7 +27,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 2em;
+  padding: 4em;
 }
 
 #imgCabecera {
@@ -36,19 +37,25 @@ body {
 .searchContainer {
   display: flex;
   flex-grow: 10;
-  display: flex;
   align-items: center;
   gap: 2em;
   justify-content: center;
-  padding: 0.75em;
+  padding: 4em;
 }
 
 #search {
-  border: solid 5px blue;
+  border: solid 2px black;
+  border-radius: 1em ;
+  padding: 1em;
+  color: white;
+}
+
+
+#btnSearch {
   border-radius: 1em;
   padding: 1em;
-  background-color: blue;
-  color: white;
+  color: black;
+  background-color: white;
 }
 
 #catalogContainer {
